# chess-engine-rust

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: board.rs  engine.rs  gui.rs  lib.rs  main.rs  pieces.rs  test.rs  tests.rs
