[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
iced = { version = "0.2", default-features = false, features = ["glow"] }
rand = "0.8"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false